corrected the book section

--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body{
     margin-left: 10px;
 }
 
-/* .w-100 {
+.w-100 {
     width: 50%!important;
-} */
+}  /* logor width*/
 
 img{vertical-align: middle;}
 
@@ -62,16 +62,16 @@ h1{
     
 }
 
-/* .w-50{
+.w-50{
     width: 150%!important;
-    height: 50%;
+    /* height: 50%; */
 
 } 
 
 .col-3{
     margin: 0 auto;
     height: 100px;
-} */
+}
 
 h5{
     /* margin-right: 10px;
